@@ -1,6 +1,5 @@
 package com.epam.laboratory.app.service;
 
-
 import com.epam.laboratory.app.domain.Trainer;
 import com.epam.laboratory.app.domain.TrainingType;
 import com.epam.laboratory.app.repository.TrainerDao;
@@ -13,8 +12,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collection;
-import java.util.Collections;
+import java.util.Optional;
 import java.util.function.Predicate;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
@@ -26,9 +24,6 @@ import static org.mockito.Mockito.*;
 class TrainerServiceImplTest {
     @Mock
     private TrainerDao trainerDao;
-
-    @Mock
-    private UsernameHelper usernameHelper;
 
     @InjectMocks
     private TrainerServiceImpl trainerService;
@@ -71,83 +66,50 @@ class TrainerServiceImplTest {
         var password = "generatedPassword";
         var usernameWithSuffix = "FirstName.LastName.2";
 
-        try (var mockedStaticPasswordGenerator = mockStatic(PasswordGenerator.class)) {
-            mockedStaticPasswordGenerator.when(PasswordGenerator::generatePassword).thenReturn(password);
+        try (var staticMockPasswordGenerator = mockStatic(PasswordGenerator.class);
+                var mockedStaticUsernameHelper = mockStatic(UsernameHelper.class)) {
+            staticMockPasswordGenerator.when(PasswordGenerator::generatePassword).thenReturn(password);
+            mockedStaticUsernameHelper.when(() -> UsernameHelper.generateUsername(any(), any())).thenReturn(usernameWithSuffix);
 
-            try (var mockedStaticUsernameHelper = mockStatic(UsernameHelper.class)) {
-                mockedStaticUsernameHelper.when(() -> UsernameHelper.generateUsername(any(Trainer.class), any(Predicate.class))).thenReturn(usernameWithSuffix);
+            given(trainerDao.save(any(Trainer.class))).willReturn(trainer);
 
-                given(trainerDao.save(any(Trainer.class))).willReturn(trainer);
+            // when
+            var actualResult = trainerService.create(trainer);
 
-                // when
-                var actualResult = trainerService.create(trainer);
+            // then
+            assertThat(actualResult).isNotNull();
+            assertThat(actualResult.getId()).isNotNull();
+            assertThat(actualResult).isEqualTo(trainer);
+            assertThat(actualResult.getPassword()).isEqualTo(password);
+            assertThat(actualResult.getUsername()).isEqualTo(usernameWithSuffix);
 
-                // then
-                assertThat(actualResult).isNotNull();
-                assertThat(actualResult.getId()).isNotNull();
-                assertThat(actualResult).isEqualTo(trainer);
-                assertThat(actualResult.getPassword()).isEqualTo(password);
-                assertThat(actualResult.getUsername()).isEqualTo(usernameWithSuffix);
-
-                verify(trainerDao, times(1)).save(any(Trainer.class));
-                verifyNoMoreInteractions(trainerDao);
-            }
+            verify(trainerDao, times(1)).save(any(Trainer.class));
+            verifyNoMoreInteractions(trainerDao);
         }
     }
 
     @Test
     @DisplayName("Test of the method update - should update trainer with generated username")
-    void testUpdate_uniqueUsername() {
+    void testUpdate() {
         // given
         var trainer = createTrainer();
         trainer.setFirstName("UpdatedFirstName");
         var generatedUsername = "UpdatedFirstName.LastName";
+        trainer.setUsername(generatedUsername);
 
-        try (var mockedStaticUsernameHelper = mockStatic(UsernameHelper.class)) {
-            mockedStaticUsernameHelper.when(() -> UsernameHelper.generateUsername(any(Trainer.class), any(Predicate.class))).thenReturn(generatedUsername);
+        given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
 
-            given(usernameHelper.generateUsername(any(Trainer.class), any(Predicate.class))).willReturn(generatedUsername);
-            given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
+        // when
+        var actualResult = trainerService.update(trainer);
 
-            // when
-            var actualResult = trainerService.update(trainer);
+        // then
+        assertThat(actualResult).isNotNull();
+        assertThat(actualResult.getId()).isNotNull();
+        assertThat(actualResult).isEqualTo(trainer);
+        assertThat(actualResult.getUsername()).isEqualTo(generatedUsername);
 
-            // then
-            assertThat(actualResult).isNotNull();
-            assertThat(actualResult.getId()).isNotNull();
-            assertThat(actualResult).isEqualTo(trainer);
-            assertThat(actualResult.getUsername()).isEqualTo(generatedUsername);
-
-            verify(trainerDao, times(1)).update(any(Trainer.class));
-            verifyNoMoreInteractions(trainerDao);
-        }
-    }
-
-    @Test
-    @DisplayName("Test of the method update - should update trainer with generated username with suffix if username is not unique")
-    void testUpdate_nonUniqueUsername() {
-        // given
-        var trainer = createTrainer();
-        trainer.setFirstName("UpdatedFirstName");
-        var generatedUsernameWithSuffix = "UpdatedFirstName.LastName2";
-
-        try (var mockedStaticUsernameHelper = mockStatic(UsernameHelper.class)) {
-            mockedStaticUsernameHelper.when(() -> UsernameHelper.generateUsername(any(Trainer.class), any(Predicate.class))).thenReturn(generatedUsernameWithSuffix);
-
-            given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
-
-            // when
-            var actualResult = trainerService.update(trainer);
-
-            // then
-            assertThat(actualResult).isNotNull();
-            assertThat(actualResult.getId()).isNotNull();
-            assertThat(actualResult).isEqualTo(trainer);
-            assertThat(actualResult.getUsername()).isEqualTo(generatedUsernameWithSuffix);
-
-            verify(trainerDao, times(1)).update(any(Trainer.class));
-            verifyNoMoreInteractions(trainerDao);
-        }
+        verify(trainerDao, times(1)).update(any(Trainer.class));
+        verifyNoMoreInteractions(trainerDao);
     }
 
     @Test
@@ -167,27 +129,61 @@ class TrainerServiceImplTest {
     }
 
     @Test
+    @DisplayName("Test of the method selectById - should return trainer if it exists")
+    void testSelectById_positive() {
+        // given
+        var trainer = createTrainer();
+
+        given(trainerDao.findById(anyLong(), any(Class.class))).willReturn(Optional.of(trainer));
+
+        // when
+        var actualResult = trainerService.selectById(1L, Trainer.class);
+
+        // then
+        assertThat(actualResult).isNotNull();
+        assertThat(actualResult).isPresent();
+        assertThat(actualResult).contains(trainer);
+
+        verify(trainerDao, times(1)).findById(anyLong(), any(Class.class));
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method selectById - should return empty optional if trainer does not exist")
+    void testSelectById_negative() {
+        // given
+        given(trainerDao.findById(anyLong(), any(Class.class))).willReturn(Optional.empty());
+
+        // when
+        var actualResult = trainerService.selectById(1L, Trainer.class);
+
+        // then
+        assertThat(actualResult).isNotNull();
+        assertThat(actualResult).isEmpty();
+
+        verify(trainerDao, times(1)).findById(anyLong(), any(Class.class));
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
     @DisplayName("Test of the method selectByCondition - should return collection of trainers that satisfy condition")
     void testSelectByCondition_positive() {
         // given
         var trainer = createTrainer();
-        trainer.setUsername("FirstName.LastName");
 
-        given(trainerDao.findByCondition(any(Predicate.class), any(Class.class))).willReturn(Collections.singletonList(trainer));
+        given(trainerDao.findByCondition(any(), any(Class.class))).willReturn(java.util.List.of(trainer));
 
         // when
-        var actualResult = trainerService.selectByCondition(t -> "FirstName.LastName".equals(t.getUsername()), Trainer.class);
+        var actualResult = trainerService.selectByCondition((cb, root) ->
+                cb.equal(root.get("username"), "FirstName.LastName"), Trainer.class);
 
         // then
         assertThat(actualResult).isNotNull();
-        assertThat(actualResult).isInstanceOf(Collection.class);
+        assertThat(actualResult).isInstanceOf(java.util.Collection.class);
         assertThat(actualResult).hasSize(1);
-        actualResult.forEach(t -> {
-            assertThat(t).isInstanceOf(Trainer.class);
-            assertThat(t.getUsername()).isEqualTo("FirstName.LastName");
-        });
+        assertThat(actualResult).contains(trainer);
 
-        verify(trainerDao, times(1)).findByCondition(any(Predicate.class), any(Class.class));
+        verify(trainerDao, times(1)).findByCondition(any(), any(Class.class));
         verifyNoMoreInteractions(trainerDao);
     }
 
@@ -195,17 +191,170 @@ class TrainerServiceImplTest {
     @DisplayName("Test of the method selectByCondition - should return empty collection if there are no trainers that match the condition")
     void testSelectByCondition_negative() {
         // given
-        given(trainerDao.findByCondition(any(Predicate.class), any(Class.class))).willReturn(Collections.emptyList());
+        given(trainerDao.findByCondition(any(), any(Class.class))).willReturn(java.util.List.of());
 
         // when
-        var actualResult = trainerService.selectByCondition(t -> "FirstName.LastName".equals(t.getUsername()), Trainer.class);
+        var actualResult = trainerService.selectByCondition((cb, root) ->
+                cb.equal(root.get("username"), "FirstName.LastName"), Trainer.class);
 
         // then
         assertThat(actualResult).isNotNull();
-        assertThat(actualResult).isInstanceOf(Collection.class);
+        assertThat(actualResult).isInstanceOf(java.util.Collection.class);
         assertThat(actualResult).isEmpty();
 
-        verify(trainerDao, times(1)).findByCondition(any(Predicate.class), any(Class.class));
+        verify(trainerDao, times(1)).findByCondition(any(), any(Class.class));
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method selectByUsername - should return trainer if it exists")
+    void testSelectByUsername_positive() {
+        // given
+        var trainer = createTrainer();
+
+        given(trainerDao.findByUsername(anyString())).willReturn(Optional.of(trainer));
+
+        // when
+        var actualResult = trainerService.selectByUsername("FirstName.LastName");
+
+        // then
+        assertThat(actualResult).isNotNull();
+        assertThat(actualResult).isPresent();
+        assertThat(actualResult).contains(trainer);
+
+        verify(trainerDao, times(1)).findByUsername(anyString());
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method selectByUsername - should return empty optional if trainer does not exist")
+    void testSelectByUsername_negative() {
+        // given
+        given(trainerDao.findByUsername(anyString())).willReturn(Optional.empty());
+
+        // when
+        var actualResult = trainerService.selectByUsername("FirstName.LastName");
+
+        // then
+        assertThat(actualResult).isNotNull();
+        assertThat(actualResult).isEmpty();
+
+        verify(trainerDao, times(1)).findByUsername(anyString());
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method checkPasswordForUsername - should return true if password is correct for username")
+    void testCheckPasswordForUsername_positive() {
+        // given
+        var trainer = createTrainer();
+        trainer.setUsername("FirstName.LastName");
+        trainer.setPassword("password");
+
+        given(trainerDao.findByUsername(anyString())).willReturn(Optional.of(trainer));
+
+        // when
+        var actualResult = trainerService.checkPasswordForUsername("FirstName.LastName", "password");
+
+        // then
+        assertThat(actualResult).isTrue();
+
+        verify(trainerDao, times(1)).findByUsername(anyString());
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method checkPasswordForUsername - should return false if password is incorrect for username")
+    void testCheckPasswordForUsername_negative() {
+        // given
+        given(trainerDao.findByUsername(anyString())).willReturn(Optional.empty());
+
+        // when
+        var actualResult = trainerService.checkPasswordForUsername("FirstName.LastName", "wrongPassword");
+
+        // then
+        assertThat(actualResult).isFalse();
+
+        verify(trainerDao, times(1)).findByUsername(anyString());
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method changePassword - should change password for username if new password is valid")
+    void testChangePasswordForUsername_withValidPassword() {
+        // given
+        var trainer = createTrainer();
+        trainer.setUsername("FirstName.LastName");
+        trainer.setPassword("oldPassword");
+
+        given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
+
+        // when
+        trainerService.changePassword(trainer, "newPassword");
+
+        // then
+        assertThat(trainer.getPassword()).isEqualTo("newPassword");
+
+        verify(trainerDao, times(1)).update(any(Trainer.class));
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method changePassword - should not change password for username if new password is empty")
+    void testChangePasswordForUsername_withEmptyPassword() {
+        // given
+        var trainer = createTrainer();
+        trainer.setUsername("FirstName.LastName");
+        trainer.setPassword("oldPassword");
+
+        var generatedPassword = "generatedPassword";
+
+        try (var mockedStaticPasswordGenerator = mockStatic(PasswordGenerator.class)) {
+            mockedStaticPasswordGenerator.when(PasswordGenerator::generatePassword).thenReturn(generatedPassword);
+
+            given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
+
+            // when
+            trainerService.changePassword(trainer, "");
+
+            // then
+            assertThat(trainer.getPassword()).isEqualTo(generatedPassword);
+
+            verify(trainerDao, times(1)).update(any(Trainer.class));
+            verifyNoMoreInteractions(trainerDao);
+        }
+    }
+
+    @Test
+    @DisplayName("Test of the method changeStatus - should change status of trainer")
+    void testChangeStatus() {
+        // given
+        var trainer = createTrainer();
+        trainer.setActive(true);
+
+        given(trainerDao.update(any(Trainer.class))).willReturn(trainer);
+
+        // when
+        trainerService.changeStatus(trainer, false);
+
+        // then
+        assertThat(trainer.isActive()).isFalse();
+
+        verify(trainerDao, times(1)).update(any(Trainer.class));
+        verifyNoMoreInteractions(trainerDao);
+    }
+
+    @Test
+    @DisplayName("Test of the method deleteByUsername - should delete trainer by username")
+    void testDeleteByUsername() {
+        // given
+        doNothing().when(trainerDao).deleteByUsername(anyString());
+
+        // when
+        trainerService.deleteByUsername("FirstName.LastName");
+
+        // then
+        verify(trainerDao, times(1)).deleteByUsername(anyString());
         verifyNoMoreInteractions(trainerDao);
     }
 
@@ -214,7 +363,7 @@ class TrainerServiceImplTest {
         trainer.setId(1L);
         trainer.setFirstName("FirstName");
         trainer.setLastName("LastName");
-        trainer.setSpecialization(TrainingType.FITNESS);
+        trainer.setSpecialization(new TrainingType());
         trainer.setActive(true);
 
         return trainer;
